Fix width of calendar to sensible default width on small screens

--- a/client/components/date-range/style.scss
+++ b/client/components/date-range/style.scss
@@ -47,8 +47,8 @@
 	margin: 0 auto;
 	// max-width: 90%;
 
-	@include breakpoint( '>480px' ) {
-		// width: 400px;
+	@include breakpoint( '<480px' ) {
+		max-width: 300px;
 	}
 }
 
